@@ -11,10 +11,11 @@ import uts.isd.model.OpalCard;
 import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Arrays;
 
 public class OpalCardDBTest {
 
-    private OpalCardDAO opalCardDAO; // The mock object
+    private OpalCardDAO opalCardDAO;
 
     @Before
     public void setUp() {
@@ -64,7 +65,7 @@ public class OpalCardDBTest {
         OpalCard mockOpalCard = new OpalCard(0, cardNumber, cardName, balance, cardStatus, userID, cardSecurityCode);
 
         // Simulate finding the Opal card
-        when(opalCardDAO.getCardsByUserId(userID)).thenReturn(new ArrayList<>(List.of(mockOpalCard)));
+        when(opalCardDAO.getCardsByUserId(userID)).thenReturn(new ArrayList<>(Arrays.asList(mockOpalCard)));
 
         // Act
         List<OpalCard> foundCards = opalCardDAO.getCardsByUserId(userID);
@@ -102,5 +103,36 @@ public class OpalCardDBTest {
 
         // Verify that the deleteOpalCard method was called exactly once
         verify(opalCardDAO, times(1)).deleteOpalCard(mockOpalCard.getCardID());
+    }
+
+    @Test
+    public void testRenameOpalCard() throws SQLException {
+        // Arrange
+        String cardNumber = "123456789";
+        String oldCardName = "Old Card Name";
+        String newCardName = "New Card Name";
+        double balance = 100.0;
+        String cardStatus = "active";
+        String userID = "1";
+        String cardSecurityCode = "1234";
+
+        OpalCard mockOpalCard = new OpalCard(1, cardNumber, oldCardName, balance, cardStatus, userID, cardSecurityCode);
+
+        // Simulate renaming the card
+        doNothing().when(opalCardDAO).updateOpalCardName(mockOpalCard.getCardID(), newCardName);
+
+        // Act
+        opalCardDAO.updateOpalCardName(mockOpalCard.getCardID(), newCardName);
+
+        // Simulate fetching the renamed card
+        mockOpalCard.setCardName(newCardName);
+        when(opalCardDAO.getCardsByUserId(userID)).thenReturn(new ArrayList<>(Arrays.asList(mockOpalCard)));
+
+        // Assert: Ensure the card's name is updated correctly
+        List<OpalCard> updatedCards = opalCardDAO.getCardsByUserId(userID);
+        assertEquals(newCardName, updatedCards.get(0).getCardName());
+
+        // Verify that the updateOpalCardName method was called exactly once
+        verify(opalCardDAO, times(1)).updateOpalCardName(mockOpalCard.getCardID(), newCardName);
     }
 }
